# dlpc8445_flasher

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml
gui/: Cargo.toml  Dioxus.toml
gui/assets/: main.css
gui/src/: main.rs
src/: dlpc8445.rs  flash.rs  lib.rs  main.rs  protocol.rs
