[package]
authors = ["Stefan Kerkmann"]
name = "dlpc8445_flasher"
version = "0.1.0"
edition = "2024"

[lib]
name = "dlpc8445_proto"
path = "src/lib.rs"

[[bin]]
name = "dlpc8845_flasher"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
binrw = "0.15.1"
bitfield-struct = "0.13.0"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
log = "0.4.29"
nusb = "0.2.3"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.12"
